--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
 
+html {
+  background-color: rgba(83, 0, 83, 0.233);
+}
+
 header {
   display: flex;
   justify-content: center;
@@ -7,6 +11,10 @@ header {
   background-color: rgb(0, 21, 143);
   color: white;
   font-family: "Press Start 2P", cursive;
+}
+
+#titleMessage {
+  padding-top: 10px;
 }
 
 #scoresContainer {
@@ -27,8 +35,9 @@ header {
 
 #gameGrid {
   display: flex;
-  background-image: "url('pokemonMap.jpg')";
-  width: 1400px;
+  background-image: url("pokemonMap.jpg");
+  width: max-content;
+  padding-bottom: 136px;
   flex-direction: row;
   justify-content: space-around;
   flex-wrap: wrap;
@@ -36,6 +45,7 @@ header {
 
 .card {
   font-family: "Press Start 2P", cursive;
+  font-size: 12px;
   border: 2px solid black;
   width: 200px;
   height: 300px;
@@ -43,9 +53,9 @@ header {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-top: 30px;
-  margin-left: 15px;
-  margin-right: 15px;
+  margin-top: 70px;
+  margin-left: 30px;
+  margin-right: 30px;
   background-color: rgb(248, 196, 53);
   transition: all 0.2s ease-in-out;
 }
